<resources>
    <string name="app_name">CycleBud2</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_name">CYCLEBUD</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>

    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="login_password">Email Address</string>
    <string name="login_email">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="road_search">Search Places</string>

</resources>
